--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
   align-items: center;
 }
 
-.container {
+.container-wrapper {
   background-color: var(--secondary-color);
   margin: 3.5rem;
   box-shadow: 0 1rem 3rem var(--grey-color);
@@ -63,6 +63,16 @@ html {
   margin: 0.3rem 0;
 }
 
+
+.logo {
+  background-color: white;
+  position: absolute;
+  top: 3.5rem;
+  right: 6.5rem;
+  z-index: 200;
+}
+
+
 .navbar-wrapper {
   width: 100vw;
   height: 100vh;
@@ -70,7 +80,7 @@ html {
   position: fixed;
   left: 0;
   bottom: -100%;
-  opacity: 0;
+  opacity: 1;
   z-index: 300;
   padding: 3.5rem 5.5rem 3.5rem 3.5rem;
   transition: bottom 0.5s, opacity 0.2s;
@@ -82,7 +92,7 @@ html {
   transition: bottom 0.5s, opacity 0.2s 0.25s;
 }
 
-.navbar {
+.nav-bar {
   width: 100%;
   height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
@@ -165,21 +175,27 @@ html {
 .header {
   width: 100%;
   height: calc(100vh - 7rem);
-  background: linear-gradient(rgba(18, 113, 255, 0.172), rgba(18, 113, 255, 0.177)),
-    url(images/header-bg1.jpg) center no-repeat;
-  background-size: cover;
+ /*  background: linear-gradient(rgba(1, 6, 13, 0.254), rgba(1, 6, 13, 0.254)),
+    url(images/header-bg1.0.jpg) center no-repeat; */
+  /* background-size: cover; */
   position: relative;
   perspective: 100rem;
 }
 
 .header-text {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
   text-transform: uppercase;
+  align-items: flex-start;
   letter-spacing: 0.1rem;
   text-shadow: 0 0.3rem 0.5rem var(--grey-color);
+  margin-left: 15rem;
 }
 
 .heading {
+  text-align: center;
   font-size: 8rem;
   color: var(--white-color);
 }
@@ -189,110 +205,24 @@ html {
   font-weight: 500;
   color: var(--secondary-color);
   max-width: 70rem;
-  margin: auto;
 }
 
-
-/* 
-.logo {
-  position: absolute;
-  top: 4rem;
-  right: 4rem;
+.carousel {
+  background: linear-gradient(rgb(20, 100, 212), rgba(38, 99, 184, 0.254)),
+  url() center no-repeat;
 }
 
-.logo h1 {
-  display: flex;
+.slide-img {
+  width: 50%;
 }
 
-.logo h1 span {
-  font-size: 2rem;
-  font-weight: 900;
-  color: var(--primary-color);
-  text-transform: uppercase;
-  background-color: var(--white-color);
-  width: 3.5rem;
-  height: 3.5rem;
-  margin: 0.5rem;
-  border-radius: 50%;
+.carousel-inner > .item .active {
+
 }
 
-.logo h1 span:nth-child(1) {
-  animation: drop-letters 5s 0.1s infinite;
+.carousel-inner > .item > img {
+  height: 92vh;
+  object-fit: cover;
 }
 
-.logo h1 span:nth-child(2) {
-  animation: drop-letters 5s 0.2s infinite;
-}
-
-.logo h1 span:nth-child(3) {
-  animation: drop-letters 5s 0.3s infinite;
-}
-
-.logo h1 span:nth-child(4) {
-  animation: drop-letters 5s 0.4s infinite;
-}
-
-.logo h1 span:nth-child(5) {
-  animation: drop-letters 5s 0.5s infinite;
-}
-
-.logo h1 span:nth-child(6) {
-  animation: drop-letters 5s 0.6s infinite;
-}
-
-.logo h1 span:nth-child(7) {
-  animation: drop-letters 5s 0.7s infinite;
-}
-
-@keyframes drop-letters {
-  0% {
-    transform: translateY(0);
-  }
-  10% {
-    transform: translateY(0);
-  }
-  15% {
-    transform: translateY(-100%);
-  }
-  20% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(0);
-  }
-} */
-
-.header-image {
-  width: 25%;
-  /* animation: image-float 150s infinite; */
-}
-
-video {
-  object-fit: contain;
-  overflow-clip-margin: content-box;
-  overflow: clip;
-}
-
-@keyframes image-float {
-  0% {
-    transform: translateZ(40rem);
-    opacity: 1;
-  }
-  40% {
-    transform: translateZ(-500rem) translateX(150rem);
-    opacity: 0.8;
-  }
-  70% {
-    transform: translateZ(-1500rem) translateX(800rem);
-    opacity: 0.6;
-  }
-  80% {
-    transform: translateZ(-50rem) translateX(100rem);
-    opacity: 0.8;
-  }
-  100% {
-    transform: translateZ(40rem);
-    opacity: 1;
-  }
-}
 /* End of Header */
